# cbia-builder

./: .gitignore  agents.md  control.kernel.json  pyproject.toml
.github/workflows/: pr_dag_guard.yml
assurance/: audit_bundle.manifest.json
cbia-builder-main/: .pr-branch  README.md  justfile  objectives.json
cbia-builder-main/assurance/: claims.json
cbia-builder-main/control/: authority.ledger.json
cbia-builder-main/docs/: WORKFLOW.md
cbia-builder-main/policy/: decision.rego  dependency_closure.rego  inference.rego
cbia-builder-main/scripts/: check_material.py  list_projects.py
cbia-builder-main/tools/: run_pipeline.py
codex/: README.md
codex/packets/: packet-02-deterministic-cache-replay.md  packet-03-opa-memoization.md  packet-04-external-gen-executor-hook.md  packet-05-mechanical-check-enforcement.md  packet-06-promote-implementation.md
control/: README_PREGEN.md
control/executors/: gen_executor.schema.json
control/kernel/: dependency.contract.json  execution_dag.json
docs/pr/: PR_LOG.md  (+2 more)
opa/: bundle.hash  decision.json  explain.json  input.json
policy/: authority.rego
reports/: cbia-builder-ramp-001-report.md
scripts/: check_material.py  list_projects.py  update_stage.py  validate_schemas.py
tests/: test_cache_replay.py  test_gen_executor.py  test_list_projects.py  test_opa_memoization.py
tools/: gen_control_maps.py  pipeline_driver.py  run_pipeline.py
workbench/inf1250/: pyproject.toml
workbench/inf1250/notebooks/m2/: 00-m2-workpad.md
workbench/inf1250/src/inf1250_lens/: __init__.py  db.py  evidence.py  lens.py  sql.py
(+84 files in other folders)
